Resize iframe for publications

--- a/publications/index.html
+++ b/publications/index.html
@@ -3,6 +3,5 @@ layout: fullwidth
 title: Publications
 ---
 
-<base target="_parent"/>
-<iframe src="publications.html">
+<iframe src="publications.html" height="500"/>
 
