Restructure publications page

--- a/publications/index.html
+++ b/publications/index.html
@@ -3,5 +3,7 @@ layout: fullwidth
 title: Publications
 ---
 
-<iframe src="publications.html" height="500"/>
+<h2>My Publications</h2>
+
+{% include publications.html %}
 
